[package]
name = "nginx_robot_access"
version = "0.1.0"
edition = "2021"
description = "NGINX robot access module"
categories = ["access-control", "network-programming"]
keywords = ["nginx", "robots.txt"]
repository = "https://github.com/glyn/nginx_robot_access"
homepage = "https://github.com/nglyn/nginx_robot_access"
license = "Apache-2.0"
autoexamples = false

[lib]
crate-type = ["cdylib"]
path = "src"

[dependencies]
ngx = "0.4.1"
nginx-sys = "0.2.1"
tokio = { version = "1.33.0", features = ["full"] }

