[package]
name = "nginx_robot_access"
version = "0.1.0"
edition = "2021"
description = "NGINX robot access module"
categories = ["access-control", "network-programming"]
keywords = ["nginx", "robots.txt"]
repository = "https://github.com/glyn/nginx_robot_access"
homepage = "https://github.com/nglyn/nginx_robot_access"
license = "Apache-2.0"
autoexamples = false

[lib]
crate-type = ["cdylib"]
path = "src/robot.rs"

[dependencies]
cc = "1.2.0"
ngx = { git = "https://github.com/glyn/ngx-rust", tag = "pre-0.5.0-2"}
robotstxt = "0.3.0"
tokio = { version = "1.33.0", features = ["full"] }
